fixing eror Sprint 1 US001-US002-US003, payload and services